Cambios del menú y de las instrucciones del DVI

--- a/app/Resources/views/plantilla.html.twig
+++ b/app/Resources/views/plantilla.html.twig
@@ -85,53 +85,33 @@
                         </a>
                         <ul class="menu_level_1 dropdown-menu">
                             <li class="first">
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgBenefiEstudiante/">
-                                    Beneficiario del estudiante
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgRol/">
-                                    Rol
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgOrientador/">
-                                    Orientador
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgTipoEntrevista/">
-                                    Tipo entrevista
-                                </a>
-                            </li>
-                            <li class="first">
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgMotivoConsulta/">
-                                    Motivo consulta
-                                </a>
-                            </li>
-                            <li>
                                 <a href="http://localhost/sagaco/web/app_dev.php/pgArea/">
                                     Área
                                 </a>
                             </li>
                             <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgParentesco/">
-                                    Parentesco
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgBenefiEstudiante/">
+                                    Beneficiario del estudiante
                                 </a>
                             </li>
                             <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgGenero/">
-                                    Género
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgCarrera/">
+                                    Carrera
                                 </a>
                             </li>
                             <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgEstadoCivil/">
-                                    Estado civil
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgCiudad/">
+                                    Ciudad
                                 </a>
                             </li>
                             <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgPais/">
-                                    País
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgDiaSemana/">
+                                    Dia semana
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgDuracion/">
+                                    Duración
                                 </a>
                             </li>
                             <li>
@@ -140,8 +120,28 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgMunicipio/">
-                                    Municipio
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgEstadoCaso/">
+                                    Estado caso
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgEstadoCita/">
+                                    Estado cita
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgEstadoCivil/">
+                                    Estado civil
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgEstadoPrueba/">
+                                    Estado prueba
+                                </a>
+                            </li>
+                            <li class="last">
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgGenero/">
+                                    Género
                                 </a>
                             </li>
                         </ul>
@@ -152,9 +152,29 @@
                             <b class="caret"></b>
                         </a>
                         <ul class="menu_level_1 dropdown-menu">
+                            <li class="first">
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgMotivoConsulta/">
+                                    Motivo consulta
+                                </a>
+                            </li>
                             <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgCiudad/">
-                                    Ciudad
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgMunicipio/">
+                                    Municipio
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgOrientador/">
+                                    Orientador
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgPais/">
+                                    País
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgParentesco/">
+                                    Parentesco
                                 </a>
                             </li>
                             <li>
@@ -163,43 +183,18 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgRol/">
+                                    Rol
+                                </a>
+                            </li>
+                            <li>
                                 <a href="http://localhost/sagaco/web/app_dev.php/pgSemestre/">
                                     Semestre
                                 </a>
                             </li>
                             <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgEstadoCita/">
-                                    Estado cita
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgEstadoCaso/">
-                                    Estado caso
-                                </a>
-                            </li>
-                            <li class="last">
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgDiaSemana/">
-                                    Dia semana
-                                </a>
-                            </li>
-                            <li class="first">
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgDuracion/">
-                                    Duración
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgTipoPrueba/">
-                                    Tipo prueba
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgEstadoPrueba/">
-                                    Estado prueba
-                                </a>
-                            </li>
-                           <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgTipoPregunta/">
-                                    Tipo pregunta
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgTipoEntrevista/">
+                                    Tipo entrevista
                                 </a>
                             </li>
                             <li>
@@ -207,9 +202,14 @@
                                     Tipo institución
                                 </a>
                             </li>
+                            <li>
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgTipoPregunta/">
+                                    Tipo pregunta
+                                </a>
+                            </li>
                             <li class="last">
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgCarrera/">
-                                    Carrera
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgTipoPrueba/">
+                                    Tipo prueba
                                 </a>
                             </li>
                         </ul>
@@ -225,9 +225,14 @@
                                     Agenda
                                 </a>
                             </li>
+                            <li>
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgCita/">
+                                    Cita
+                                </a>
+                            </li>
                             <li class="last">
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgHorariCita/">
-                                    Horario Citas
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgCita/consultar">
+                                    Consultar Citas
                                 </a>
                             </li>
                         </ul>
@@ -244,31 +249,26 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgEntrevContacto/">
-                                    Entrevista de contacto
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgEntrevConsecuentes/">
+                                    Entrevista consecuente
                                 </a>
                             </li>
                             <li class="last">
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgEntrevConsecuentes/">
-                                    Entrevista consecuente
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgEntrevContacto/">
+                                    Entrevista de contacto
                                 </a>
                             </li>
                         </ul>
                     </li>
                     <li class="last dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
-                            Prueba
+                            Prueba DVI
                             <b class="caret"></b>
                         </a>
                         <ul class="menu_level_1 dropdown-menu">
                             <li class="first">
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgInstruDVI/">
-                                    Instrucciones Prueva DVI
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgDviInteres/">
-                                    DVI interés
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgDviArea/">
+                                    DVI área
                                 </a>
                             </li>
                             <li>
@@ -282,33 +282,13 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgDviArea/">
-                                    DVI área
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgHollanSeccion/">
-                                    Holland sección
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgHollanLetra/">
-                                    Holland letra
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgHollanConfiguracion/">
-                                    Holland configuración
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgAngeliConfiguracion/">
-                                    Angelini configuración
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgDviInteres/">
+                                    DVI interés
                                 </a>
                             </li>
                             <li class="last">
-                                <a href="http://localhost/sagaco/web/app_dev.php/pgAngeliInteres/">
-                                    Angelini interés
+                                <a href="http://localhost/sagaco/web/app_dev.php/pgInstruDVI/">
+                                    Instrucciones Prueva DVI
                                 </a>
                             </li>
                         </ul>
