--- a/src/sagaco/PruebaBundle/Resources/views/InstruDVI/instruDVI.html.twig
+++ b/src/sagaco/PruebaBundle/Resources/views/InstruDVI/instruDVI.html.twig
@@ -1,151 +1,60 @@
 {# empty Twig template #}
- <html>
-    <body>
-        <h1><div style="text-align: center;"><em>{{'DIAGNOSTICO VIVENCIAL DE INTERESES'}}</em></div></h1>
-        <h1><div style="text-align: center;"><em>{{'(D.V.I.) IBAÑEZ'}}</em></div></h1><br>
-        <div style="text-align: center;"><font size="5">{{'Después de haber leido las instrucciones, dar
-        click sobre el botón iniciar para comenzar la Prueba Vocacional DVI.'}}</font></div>
-        <div style="text-align: center;"><font size="5">{{'Al final de la prueba rectifique sus datos,
-        espere las observaciones y por la impresión.'}}</font></div><br>
-        <h2><div style="text-align: center;"><strong><em>{{'INSTRUCCIONES'}}</em></strong></div></h2>
-        <p><font size="5">{{'Esta prueba consta de 113 preguntas.'}}</font></p>
-        <ul>
+{% extends '::plantilla.html.twig' %}
+
+{% block id 'InstructivoDVI' %}
+    {# Barra de ruta #}
+    {% block ruta %}
+    <div class="container navbar-blanca">                
+        <ul class="breadcrumb-modi">
+            <li><a href="#"><small>Inicio</small></a></li>
+            <li class="active"><small>Instructivo DVI</small></li>
+        </ul>                              
+    </div> 
+    {% endblock %}{#-- Fin Barra de ruta --#}
+    {# Campos de la Forma #}
+    {% block twigformulario %}
+
+        <h1 class="text-center"><em>DIAGNOSTICO VIVENCIAL DE INTERESES</em></h1>
+        <h1 class="text-center"><em>(D.V.I.) IBAÑEZ</em></h1>
+        
+        <p class="lead text-center">Después de haber leido las instrucciones, dar
+            click sobre el botón iniciar para comenzar la Prueba Vocacional DVI.</p>  
+        <p class="lead text-center">Al final de la prueba rectifique sus datos,
+        espere las observaciones y por la impresión.</p> 
+        
+        <h2 class="text-center"><em><strong>INSTRUCCIONES</strong></em></h2>
+        
+        <p></p>
+        <p class="lead">Esta prueba consta de 113 preguntas.</p>
+        <ul class="lead">
             <li>
-                <font size="5">
-                    {{'Cuando Ud. se encuentre "retratado" exactamente en un enunciado,o cuando se nombre
+                Cuando Ud. se encuentre "retratado" exactamente en un enunciado,o cuando se nombre
                     una asignatura, o actividad que le guste de veras, seleccione la opción de agradable
-                    en la casilla A.'}}
-                </font>
-            </li> 
-            <br>
+                    en la casilla A.
+            </li>             
             <li>
-                <font size="5">
-                    {{'Cuando Ud. es o experimenta todo lo contrario de lo que sugiere la pregunta, o
+                Cuando Ud. es o experimenta todo lo contrario de lo que sugiere la pregunta, o
                     cuando las asignaturas, estudios y actividades que se mencionan le "repugnan" 
-                    positivamente, entonces seleccione  la opción de desagradable en lacasilla D.'}}
-                </font>
-            </li>
-            <br>
+                    positivamente, entonces seleccione  la opción de desagradable en la casilla D.
+            </li>            
             <li>
-                <font size="5">
-                    {{'En caso de duda, indecisión, o en cualquier otra hipótesis, deje en blanco las
-                    casillas correspondientes.'}}
-                </font>
-            </li>
-            <br>
+                En caso de duda, indecisión, o en cualquier otra hipótesis, deje en blanco las
+                    casillas correspondientes.
+            </li>            
             <li>
-                <font size="5">
-                    {{'Trabaje rápido y bien.'}}
-                </font>
+                Trabaje rápido y bien.
             </li>
-            <br>
-            <br>
         </ul>
-        <h2><div style="text-align: center;"><strong><font size="5"><em>{{'FAVOR ESPERAR A QUE SU PRUEBA SEA ACTIVADA PARA PODER EMPEZAR'}}</em></font></strong></div></h2>
-        <table width="1280" border="0">
-            <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td><a href="http://localhost/sagaco/web/app_dev.php/pgArea/"><input type="button" value="Iniciar" /></a></td>
-            </tr>
-        </table>
-    </body>
-</html>
-   
+        <h3 class="text-center"><strong><em>FAVOR ESPERAR A QUE SU PRUEBA SEA ACTIVADA PARA PODER EMPEZAR</em></strong></h2>
+        <div class="form-group">
+            <div class="text-center">
+                <a href="{{ path('pgInstruDVI') }}">
+                    <button type="submit" id="sagaco_pruebabundle_clDVItype_submit" name="sagaco_pruebabundle_clDVItype[submit]" class="btn btn-primary">Iniciar</button>
+                </a>
+            </div>
+        </div>   
+        
+
+        
+    {% endblock %}{#-- Fin Campos de la Forma #}
+
