--- a/src/sagaco/CitaBundle/Resources/views/clCita/consultar.html.twig
+++ b/src/sagaco/CitaBundle/Resources/views/clCita/consultar.html.twig
@@ -1,6 +1,6 @@
 {% extends '::plantilla.html.twig' %}
 
-{% block id 'rol' %}
+{% block id 'cita' %}
     {# Barra de ruta #}
     {% block ruta %}
     <div class="container navbar-blanca">                
@@ -15,12 +15,7 @@
     {% block twigformulario %}
         <fieldset>
             {# Titulo del requisito #}
-            <legend>Listar citas del día
-                <div class="pull-right">
-                    <a href="{{ path('pgCita_consultar') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Crear">
-                        <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
-                    </a>                          
-                </div>
+            <legend>Listar citas del día                
             </legend>
             {{ bootstrap_set_style('horizontal') }}
 
@@ -59,7 +54,7 @@
                                 <a href="{{ path('pgCita', { 'id': objEntidad.coCita, 'blnBandera': '0' }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Mostrar detalle">
                                     <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                                 </a>                                    
-                                <a href="{{ path('pgCita', { 'id': objEntidad.coCita }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Editar">
+                                <a href="{{ path('pgHistorPersona_registrar') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Gestionar Caso">
                                     <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                                 </a>                                 
                             </td>                            
